# ECE1724RustProject_PersonalFinanceTracker

./: .env.example  .gitignore  API_README.md  Cargo.toml  README.md  README_API.md  TESTING_GUIDE.md  finalreport.md  improve_README.md
migrations/: 20251030010001_create_users.down.sql  20251030010001_create_users.up.sql  20251030010055_create_accounts.down.sql  20251030010055_create_accounts.up.sql  20251030010105_create_categories.down.sql  20251030010105_create_categories.up.sql  20251030010113_create_transactions.down.sql  20251030010113_create_transactions.up.sql  20251030010144_create_transaction_categories.down.sql  20251030010144_create_transaction_categories.up.sql  20251030010158_create_recurring_transactions.down.sql  20251030010158_create_recurring_transactions.up.sql  20251030010211_create_exchange_rates.down.sql  20251030010211_create_exchange_rates.up.sql
src/: api.rs  exchange_scraper.rs  main.rs  models.rs  recurring.rs  seed.rs  tui.rs
