[package]
name = "ECE1724RustProject_PersonalFinanceTracker"
version = "0.1.0"
edition = "2021"

[dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full"] }

# Database
sqlx = { version = "0.8.6", features = [
    "runtime-tokio-rustls",
    "sqlite",
    "migrate",
    "macros",
    "chrono"
] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Date and time
chrono = { version = "0.4", features = ["serde"] }

# Web framework (optional, for API)
axum = { version = "0.7", optional = true }
tower = { version = "0.4", optional = true }

# Password hashing
argon2 = "0.5"

# Environment variables
dotenvy = "0.15"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

[dev-dependencies]
# Testing
tokio-test = "0.4"

[features]
default = []
api = ["axum", "tower"]