[package]
name = "ECE1724RustProject_PersonalFinanceTracker"
version = "0.1.0"
edition = "2021"

[dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full"] }

# Database
sqlx = { version = "0.8.6", features = [
    "runtime-tokio-rustls",
    "sqlite",
    "migrate",
    "macros",
    "chrono"
] }

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
axum = { version = "0.7", optional = true }
tower = { version = "0.4", optional = true }
actix-web = "4"

# Password hashing
argon2 = "0.5"

# Environment variables
dotenvy = "0.15"

# Error handling
anyhow = "1.0"
thiserror = "2.0"

# TUI dependencies
ratatui = "0.29.0"
crossterm = "0.29.0"

# Scraping Foreign Exchange Rates
reqwest = { version = "0.12", features = ["json"] }
scraper = "0.24"
futures = "0.3"

[dev-dependencies]
# Testing
tokio-test = "0.4"


[features]
default = []
api = ["axum", "tower"]